--- a/action.yml
+++ b/action.yml
@@ -48,7 +48,7 @@ outputs:
 runs:
   using: "composite"
   steps: 
-    - run: 'echo "${{ inputs.password }}" |  docker login ${{ inputs.registry }} --username ${{ inputs.username }} --password-stdin'
+    - run: 'echo ${{ inputs.password }} |  docker login ${{ inputs.registry }} --username ${{ inputs.username }} --password-stdin'
       name : 'Login to docker registry ${{ inputs.registry }}'
       shell: cmd
     - run: 'docker run ${{inputs.privileged}}  -v %CD%:C:/work -e MAKE_PACKAGE=true -e PARAM1=${{ inputs.param1 }} -e PARAM2=${{ inputs.param2 }} -e PARAM3=${{ inputs.param3 }} -e PARAM4=${{ inputs.param4 }} ${{ inputs.buildImage }} ${{ inputs.entrypoint }}'
